--- a/search/index.html
+++ b/search/index.html
@@ -45,28 +45,28 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://calvinegs.github.io/posts/ title=posts>
-<span>posts</span>
+<a href=https://calvinegs.github.io/posts/ title=Posts>
+<span>Posts</span>
 </a>
 </li>
 <li>
-<a href=https://calvinegs.github.io/archives/ title=archives>
-<span>archives</span>
+<a href=https://calvinegs.github.io/archives/ title=Archive>
+<span>Archive</span>
 </a>
 </li>
 <li>
-<a href=https://calvinegs.github.io/categories/ title=categories>
-<span>categories</span>
+<a href=https://calvinegs.github.io/categories/ title=Categories>
+<span>Categories</span>
 </a>
 </li>
 <li>
-<a href=https://calvinegs.github.io/tags/ title=tags>
-<span>tags</span>
+<a href=https://calvinegs.github.io/tags/ title=Tags>
+<span>Tags</span>
 </a>
 </li>
 <li>
-<a href=https://calvinegs.github.io/search/ title="search (Alt + /)" accesskey=/>
-<span class=active>search</span>
+<a href=https://calvinegs.github.io/search/ title="Search (Alt + /)" accesskey=/>
+<span class=active>Search</span>
 </a>
 </li>
 </ul>
