--- a/index.html
+++ b/index.html
@@ -91,6 +91,25 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>在 Github Pages 部署 Hugo 靜態網站
+</h2>
+</header>
+<section class=entry-content>
+<p>GitHub Page 功能是 GitHub 提供的一項支援靜態網頁的服務，只要在你的 repository 中加入一個名為 gh-pages 的分支，則 GitHub 便會預設將此分支內的檔案以靜態網頁的方式呈現，因此利用此特性就可很容易的製作一個簡單的網站。GitHub Pages 提供了二種不同形態的頁面 “User or organization site” & “Project Site”。其中個人/組織 網站一個 GitHub 帳號只能有一個、而專案網站則可以很多個。
+https://calvinegs.github.io #只有一個 https://calvinegs.github.io/project1
+https://calvinegs.github.io/project2
+https://calvinegs.github.io/project3
+…
+安裝步驟 Step 1: 在 GitHub 上建立一個 new repository Repository name 若為 Owner_name.github.io 即所謂的 User site，Repository name 即為靜態網站的網址。以下圖為例，有效網址為 https://calvinegs.github.io
+Step 2: 使用 GitHub Action 構建 Hugo 透過 GitHub Action 功能，在你每次將新版本的 Hugo 網站內容推送到 GitHub repository 時，GitHub 將自動建置網站。
+新增一個 .github/workflows/gh-pages.yml，內容如下:
+name: github pages on: push: branches: - main # Set a branch to deploy pull_request: jobs: deploy: runs-on: ubuntu-20....</p>
+</section>
+<footer class=entry-footer><span title="2021-12-01 17:17:02 +0800 +0800">December 1, 2021</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to 在 Github Pages 部署 Hugo 靜態網站" href=https://calvinegs.github.io/posts/deployhugo-githubpages/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>在 Windows 10 使用 Hugo
 </h2>
 </header>
