--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name=author content="Theme PaperMod">
 <link rel=canonical href=https://calvinegs.github.io/>
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
-<link rel=icon href=https://calvinegs.github.io/favicon.ico>
+<link rel=icon href=https://calvinegs.github.io/img/favicon.png>
 <link rel=icon type=image/png sizes=16x16 href=https://calvinegs.github.io/favicon-16x16.png>
 <link rel=icon type=image/png sizes=32x32 href=https://calvinegs.github.io/favicon-32x32.png>
 <link rel=apple-touch-icon href=https://calvinegs.github.io/apple-touch-icon.png>
@@ -29,7 +29,7 @@
 <meta name=twitter:image content="https://calvinegs.github.io/papermod-cover.png">
 <meta name=twitter:title content="永誌不忘 • 筆記簿">
 <meta name=twitter:description content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"永誌不忘 • 筆記簿","url":"https://calvinegs.github.io/","description":"Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod","thumbnailUrl":"https://calvinegs.github.io/favicon.ico","sameAs":[]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"永誌不忘 • 筆記簿","url":"https://calvinegs.github.io/","description":"Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod","thumbnailUrl":"https://calvinegs.github.io/img/favicon.png","sameAs":[]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
