deploy: b19447d72cf1b5157ae4c6ca278dbe8f2ed5856c

--- a/series/index.html
+++ b/series/index.html
@@ -75,6 +75,9 @@
 <h1>Series</h1>
 </header>
 <ul class=terms-tags>
+<li>
+<a href=https://calvinegs.github.io/series/hugo-%E5%8A%9F%E8%83%BD%E4%BB%8B%E7%B4%B9/>Hugo 功能介紹 <sup><strong><sup>1</sup></strong></sup> </a>
+</li>
 </ul>
 </main>
 <footer class=footer>
