--- a/index.html
+++ b/index.html
@@ -91,6 +91,23 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>Hugo 中使用的 Markdown 語法介紹
+</h2>
+</header>
+<section class=entry-content>
+<p>Hugo 內容文件中使用基本 Markdown 語法，還額外支援由 Hugo 所提供的加強語法(也支援基本 HTML 元素)。
+標題 (Headings) 要建立標題，請在文字前添加井字符號 #(請注意井字符號後要加入一個空格)。使用的井字符號的數量應與標題級別相對應。例如，要建立三級標題 ()，請使用三個井字符號（例如，### My Header）。
+H1 H2 H3 H4 H5 H6 段落 (Paragraphs) 一個 Markdown 段落是由一個或多個連續的文字行組成，它的前後要有一個以上的空行。
+文字區塊引用 (Blockquotes) 在段落的第一行最前面加">"
+未註明出處的文字區塊引用 (Blockquote without attribution) Tiam, ad mint andaepu dandae nostion secatur sequo quae. Note that you can use Markdown syntax within a blockquote.
+註明出處的文字區塊引用 (Blockquote with attribution) Don’t communicate by sharing memory, share memory by communicating.
+— Rob Pike1...</p>
+</section>
+<footer class=entry-footer><span title="2021-12-06 00:00:00 +0000 UTC">December 6, 2021</span>&nbsp;·&nbsp;2 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to Hugo 中使用的 Markdown 語法介紹" href=https://calvinegs.github.io/posts/markdown-syntax/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>在 Github Pages 部署 Hugo 靜態網站
 </h2>
 </header>
