--- a/index.html
+++ b/index.html
@@ -91,6 +91,36 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>ng cli and nodejs
+</h2>
+</header>
+<section class=entry-content>
+<p> </p>
+</section>
+<footer class=entry-footer><span title="2021-12-08 00:00:00 +0000 UTC">December 8, 2021</span>&nbsp;·&nbsp;0 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to ng cli and nodejs" href=https://calvinegs.github.io/posts/ngcli-nodejs-verion/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
+<h2>Setup Typescript Environment
+</h2>
+</header>
+<section class=entry-content>
+<p>設置 TypeScript 開發環境 TypeScript 已經支援前端開發的許多架構
+開始設置 建立一個目錄
+$ mkdir typescript-starter $ cd typescript-starter 透過 npm 產生 package.json 檔案
+$ npm init -y 在 Local 端安裝 TypeScript
+$ npm install typescript --save-dev #or -D 為 nodejs 安裝類型檔
+$ npm install @types/node --save-dev 透過 tsc 建立 TypeScript 的設定檔 (tsconfig.json)
+$ npx tsc --init P.S. 由於 typescript 是安裝在 local，執行時要透過 npx 指令(由 npm 所提供)
+指定額外的參數
+$ npx tsc --init --init --rootDir src --outDir build --esModuleInterop --resolveJsonModule --lib es6 --module commonjs --allowJs true --noImplicitAny true rootDir: TypeScript 找尋程式的地方。 outDir: TypeScript 轉譯成 JavaScript 所存放的地方。 esModuleInterop: 若使用 commonjs 為此專案的 module system，則此設定值必須設定為 true。 resolveJsonModule: 若此專案會使用 JSON，則此設定值必須設定為 true。 lib: 指定為 ‘es6’ 指可使用到新版 JS 的一些語言特性，指定 ‘es5’ 則會有較高的相容易。 module: 指存 module system，如: commonjs。 allowJs: 此選項將允許您在 ....</p>
+</section>
+<footer class=entry-footer><span title="2021-12-07 00:00:00 +0000 UTC">December 7, 2021</span>&nbsp;·&nbsp;2 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to Setup Typescript Environment" href=https://calvinegs.github.io/posts/setup-typescript-env/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>Hugo 中使用的 Markdown 語法介紹
 </h2>
 </header>
