deploy: f9fd1df265b9321f463128f6c34e723eeb5b7582

--- a/index.html
+++ b/index.html
@@ -96,11 +96,13 @@
 </header>
 <section class=entry-content>
 <p>Keyboard Shortcuts For Ubuntu Terminal 基本操作 Ctrl+Alt+T: 開啟新終端機
-Ctrl+D：關閉終端機 (關閉 Tab）
+Ctrl+Shift+W：關閉終端機 (關閉 Tab）
+Ctrl+D：關閉未輸入任何指令終端機 (關閉 Tab）
 Ctrl+C：取消正在執行中的指令
 Ctrl+L： 清除終端機畫面
 Ctrl+Shift+T： 開啟新的 Tab
 ALT+［數字鍵］： 移到第幾個 Tab
+Ctrl+PgUp/PgDn： 切換 Tab
 Ctrl+Shift+'+': Zoom In
 Ctrl+'-': Zoom Out
 在終端機中移動 Ctrl+A: 游標移動到一行開頭
@@ -112,7 +114,7 @@ Alt+B: 游標往後移動一個字
 修改文字的操作 Ctrl+D: 刪除游標所在的字元
 Ctrl+H: 刪除游標所在的前一個字元
 Ctrl+U: 刪除游標所在位置之前的所有字元
-Ctrl+K: 刪除游標所在位置之後的所有字元
+Ctrl+K: 刪除游標所在位置之後的所有字元（含游標所在的字元)
 Ctrl+W: 刪除游標所在的這個一個字（除游標所在的字元外)
 Ctrl+T: 交換游標所在的字元與前一個字元位置
 Alt+T: 交換游標所在的字與前一個字位置
