--- a/index.html
+++ b/index.html
@@ -91,6 +91,19 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>使用 .NET 6.0 進行 JWT 身份驗證的 ASP.NET Web Api。並使用 Microsoft Identity 框架來存儲使用者和角色等資料
+</h2>
+</header>
+<section class=entry-content>
+<p>github Source code #tag: minimal_webapi_jwt
+本文將記錄如何一步步從無到有使用 Dotnet Core 6.0 建立 ASP.NET Core Web API，其中將會使用到下列技術:
+Dotnet CLI Entity Framework Json Web Token SQL Server (Docker Version) ASP.NET Core Generator 建立新專案 $ dotnet new webapi -o dotnet6-webapi-jwt 範本「ASP.NET Core Web API」已成功建立。 正在處理建立後的動作... 正在 /home/egs/cal-data/tech-test/webapi/dotnet6-webapi-jwt/dotnet6-webapi-jwt.csproj 上執行 'dotnet restore'... 正在判斷要還原的專案... 已還原 /home/egs/cal-data/tech-test/webapi/dotnet6-webapi-jwt/dotnet6-webapi-jwt.csproj (238 ms 內)。 還原成功。 $ cd dotnet6-webapi-jwt $ ls -al 總用量 40 drwxrwxr-x 5 egs egs 4096 五 20 09:38 ....</p>
+</section>
+<footer class=entry-footer><span title="2022-05-20 00:00:00 +0000 UTC">May 20, 2022</span>&nbsp;·&nbsp;11 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to 使用 .NET 6.0 進行 JWT 身份驗證的 ASP.NET Web Api。並使用 Microsoft Identity 框架來存儲使用者和角色等資料" href=https://calvinegs.github.io/posts/dotnet6-webapi-jwt/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>Run SQL Server container images with Docker
 </h2>
 </header>
@@ -140,18 +153,6 @@ KEYWORD： MongoDB Cloud Services、Node.js、REST API、JWT、加解密、Mongo
 </section>
 <footer class=entry-footer><span title="2022-04-25 00:00:00 +0000 UTC">April 25, 2022</span>&nbsp;·&nbsp;7 min&nbsp;·&nbsp;Theme PaperMod</footer>
 <a class=entry-link aria-label="post link to 使用 Node.js + express 建立一個電子商務後端服務的 REST API" href=https://calvinegs.github.io/posts/nodejs-restapi-example/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>透過範例了解 Javascript Rest ＆ Spread 運算符有何不同
-</h2>
-</header>
-<section class=entry-content>
-<p>rest 和 spread 之間的主要區別在於，rest 運算符將使用者提供的特定的值的“其餘”部分放入 JavaScript 陣列中。但是擴展語法將可疊代物件擴展為各別的元素。
-rest 的範例 // 將使用者提供的某些值放入陣列中 function myBio(firstName, lastName, ...otherInfo) { return otherInfo; } // 呼叫 myBio 功能時傳入五個參數值: myBio("Oluwatobi", "Sofela", "CodeSweetly", "Web Developer", "Male"); // 回傳以下陣列: ["CodeSweetly", "Web Developer", "Male"] // 宣告二個一般變數及一個 rest 變數，再使用 destructruing 方式給值: const [firstName, lastName, ...otherInfo] = [ "Oluwatobi", "Sofela", "CodeSweetly", "Web Developer", "Male" ]; console.log(otherInfo); // 結果: ["CodeSweetly", "Web Developer", "Male"] // ES7+的物件屬性其餘運算符 const {a, b, ...rest} = {a:1, b:2, c:3, d:4} //a=1, b=2, rest={c:3, d:4} let options = { title: "Menu", height: 200, width: 100 }; // title = property named title // rest = object with the rest of properties let {title, ....</p>
-</section>
-<footer class=entry-footer><span title="2022-04-12 00:00:00 +0000 UTC">April 12, 2022</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Theme PaperMod</footer>
-<a class=entry-link aria-label="post link to 透過範例了解 Javascript Rest ＆ Spread 運算符有何不同" href=https://calvinegs.github.io/posts/rest-spread-js/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
