--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>使用 Angular 14 建立 Reactive Form 表單驗證範例
+</h2>
+</header>
+<section class=entry-content>
+<p>github Source code
+本文記錄如何一步步從無到有使用 Angular 14 Reactive Form 表單驗證 與 Bootstrap 5 建立 一個使用者資料註冊、登入的表單功能連結到後端 API (node+postgresSQL)，在這些表單中按下送出時會自動檢核使用者所輸入的資料是否合乎程式中所設定的檢核邏輯，並顯示合適的訊息反應給使用者。其中將會使用到下列技術:
+Angular CLI 14 Bootstrap 5 (UI Framework) Angular Reactive Form Custome Validator Interceptor JWT Session Storage Router Services Guard & Router Data 安裝 Angular/CLI 檢視目前環境為 node v16.14.0， global 安裝的是 Angular CLI 13.3.6
+$ node --version v16.14.0 $ ng version _ _ ____ _ ___ / \ _ __ __ _ _ _| | __ _ _ __ / ___| | |_ _| / △ \ | '_ \ / _` | | | | |/ _` | '__| | | | | | | / ___ \| | | | (_| | |_| | | (_| | | | |___| |___ | | /_/ \_\_| |_|\__, |\__,_|_|\__,_|_| \____|_____|___| |___/ Angular CLI: 13....</p>
+</section>
+<footer class=entry-footer><span title="2022-06-15 00:00:00 +0000 UTC">June 15, 2022</span>&nbsp;·&nbsp;18 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to 使用 Angular 14 建立 Reactive Form 表單驗證範例" href=https://calvinegs.github.io/posts/angular-auth-jwt/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>使用 Node.js + express + postgres 建立一個後端服務 REST API
 </h2>
 </header>
@@ -143,19 +157,6 @@ Angular CLI Bootstrap 4 & 5 (UI Framework) Angular Reactive Form Custome Validat
 </section>
 <footer class=entry-footer><span title="2022-05-28 00:00:00 +0000 UTC">May 28, 2022</span>&nbsp;·&nbsp;8 min&nbsp;·&nbsp;Theme PaperMod</footer>
 <a class=entry-link aria-label="post link to 使用 Angular 13 建立 Reactive Form 表單驗證範例" href=https://calvinegs.github.io/posts/angular-formvalidate/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>使用 .NET 6.0 進行 JWT 身份驗證的 ASP.NET Web Api。並使用 Microsoft Identity 框架來存儲使用者和角色等資料
-</h2>
-</header>
-<section class=entry-content>
-<p>github Source code #tag: dotnet6_webapi_jwt
-本文將記錄如何一步步從無到有使用 Dotnet Core 6.0 建立 ASP.NET Core Web API，其中將會使用到下列技術:
-Dotnet CLI Entity Framework Json Web Token SQL Server (Docker Version) ASP.NET Core Generator 建置新專案 $ dotnet new webapi -o dotnet6-webapi-jwt 範本「ASP.NET Core Web API」已成功建立。 正在處理建立後的動作... 正在 /home/egs/cal-data/tech-test/webapi/dotnet6-webapi-jwt/dotnet6-webapi-jwt.csproj 上執行 'dotnet restore'... 正在判斷要還原的專案... 已還原 /home/egs/cal-data/tech-test/webapi/dotnet6-webapi-jwt/dotnet6-webapi-jwt.csproj (238 ms 內)。 還原成功。 $ cd dotnet6-webapi-jwt $ ls -al 總用量 40 drwxrwxr-x 5 egs egs 4096 五 20 09:38 ....</p>
-</section>
-<footer class=entry-footer><span title="2022-05-20 00:00:00 +0000 UTC">May 20, 2022</span>&nbsp;·&nbsp;11 min&nbsp;·&nbsp;Theme PaperMod</footer>
-<a class=entry-link aria-label="post link to 使用 .NET 6.0 進行 JWT 身份驗證的 ASP.NET Web Api。並使用 Microsoft Identity 框架來存儲使用者和角色等資料" href=https://calvinegs.github.io/posts/dotnet6-webapi-jwt/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
