--- a/index.html
+++ b/index.html
@@ -91,6 +91,19 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>使用 Docker 執行 MySQL
+</h2>
+</header>
+<section class=entry-content>
+<p>使用 Docker 執行 MySQL 對開發人員而言，使用各式的資料庫管理系統來當應用程式的後端資料存取層是家常便飯。若再考慮上每種資料庫管理系統有不同的版本，肯定會讓你的開發環境負擔過重、過於複雜。使用 Docker 來於適當的時機開啟適用的資料庫管理系統會是一個不錯的選擇。
+本篇筆記紀錄使用 docker (docker compose) 來快速的設置 MySQL。
+檢查是否已安裝了 Docker (docker version) $ docker version Client: Docker Engine - Community Version: 20.10.17 API version: 1.41 Go version: go1.17.11 Git commit: 100c701 Built: Mon Jun 6 23:02:57 2022 OS/Arch: linux/amd64 Context: default Experimental: true Server: Docker Engine - Community Engine: Version: 20.10.17 API version: 1.41 (minimum version 1.12) Go version: go1.17.11 Git commit: a89b842 Built: Mon Jun 6 23:01:03 2022 OS/Arch: linux/amd64 Experimental: false containerd: Version: 1....</p>
+</section>
+<footer class=entry-footer><span title="2022-06-17 00:00:00 +0000 UTC">June 17, 2022</span>&nbsp;·&nbsp;8 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to 使用 Docker 執行 MySQL" href=https://calvinegs.github.io/posts/dock-mysql/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>使用 Angular 14 建立 Reactive Form 表單驗證範例
 </h2>
 </header>
@@ -144,19 +157,6 @@ $ git clone https://github.com/calvinegs/dotnet6-webapi-jwt.git dotnet6-webapi-p
 </section>
 <footer class=entry-footer><span title="2022-06-01 00:00:00 +0000 UTC">June 1, 2022</span>&nbsp;·&nbsp;4 min&nbsp;·&nbsp;Theme PaperMod</footer>
 <a class=entry-link aria-label="post link to 使用 Docker 執行 PostgresSQL 與 pgAdmin" href=https://calvinegs.github.io/posts/docker-postgres-pgadmin/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>使用 Angular 13 建立 Reactive Form 表單驗證範例
-</h2>
-</header>
-<section class=entry-content>
-<p>github Source code
-本文將記錄如何一步步從無到有使用 Angular 13 Reactive Form 表單驗證 與 Bootstrap 建立 一個使用者資料註冊的表單　功能，在這個表單中當按下送出時會自動檢核使用者所輸入的資料是否合乎程式中所設定的檢核邏輯，並顯示合適的訊息反應給使用者。其中將會使用到下列技術:
-Angular CLI Bootstrap 4 & 5 (UI Framework) Angular Reactive Form Custome Validator 建立新專案 $ ng version Angular CLI: 13.3.6 Node: 16.14.0 Package Manager: npm 8.3.1 OS: linux x64 Angular: 13.3.9 ... animations, common, compiler, compiler-cli, core, forms ... platform-browser, platform-browser-dynamic, router Package Version --------------------------------------------------------- @angular-devkit/architect 0.1303.6 @angular-devkit/build-angular 13.3.6 @angular-devkit/core 13.3.6 @angular-devkit/schematics 13.3.6 @angular/cli 13....</p>
-</section>
-<footer class=entry-footer><span title="2022-05-28 00:00:00 +0000 UTC">May 28, 2022</span>&nbsp;·&nbsp;8 min&nbsp;·&nbsp;Theme PaperMod</footer>
-<a class=entry-link aria-label="post link to 使用 Angular 13 建立 Reactive Form 表單驗證範例" href=https://calvinegs.github.io/posts/angular-formvalidate/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
