deploy: af87c6fd3a21210ec293fd17d43251e7297db115

--- a/index.html
+++ b/index.html
@@ -118,6 +118,29 @@ $ node --version v16.14.0 $ ng version _ _ ____ _ ___ / \ _ __ __ _ _ _| | __ _ 
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>國民健康訪問調整網站維護說明
+</h2>
+</header>
+<section class=entry-content>
+<p>安裝工具 VSCode 在 windows 10 下安裝 VSCode，首先先下載安裝程式 （https://code.visualstudio.com/Download)，依照你的電腦選擇要安裝的版本，若是比較新的PC大都為 64 bit，可點選 for Windows 8，10，11 的 User Installer 64 位元使用。
+下載完成點選“開啟檔案”後即進行安裝。
+點選“我同意”選項後按下“下一步“
+選擇安裝路徑後按下“下一步”
+“下一步” => “下一步” => “下一步” => “安裝“
+完成
+更多資訊可參考 https://code.visualstudiocom/docs/?dv=win64user
+Live Server Extension for VSCode 在 VSCode 中 Ctrl+Shift+X 打開 Extensions 功能
+在搜尋框內輸入 live server，找到 Live Server Extension，按下“Install”
+安裝好 Live Server Extension 後在右下角會出現 “Go Live" 的功能按鈕
+git for windows git 是目前最火紅的 “程式碼版本控制管理系統”，用這個工具可以協助你管理你的網頁程式。
+git for windows 安裝程式下載 https://git-scm.com/downloads
+依你的作業系統選擇合適版本，下載後“開啟檔案” 進行安裝。...</p>
+</section>
+<footer class=entry-footer><span title="2022-06-15 00:00:00 +0000 UTC">June 15, 2022</span>&nbsp;·&nbsp;6 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to 國民健康訪問調整網站維護說明" href=https://calvinegs.github.io/posts/nhisweb/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>使用 Node.js + express + postgres 建立一個後端服務 REST API
 </h2>
 </header>
@@ -143,20 +166,6 @@ $ git clone https://github.com/calvinegs/dotnet6-webapi-jwt.git dotnet6-webapi-p
 </section>
 <footer class=entry-footer><span title="2022-06-02 00:00:00 +0000 UTC">June 2, 2022</span>&nbsp;·&nbsp;2 min&nbsp;·&nbsp;Theme PaperMod</footer>
 <a class=entry-link aria-label="post link to 使用 .NET 6.0 進行 JWT 身份驗證的 ASP.NET Web Api。並使用 Microsoft Identity 框架來存儲使用者和角色等資料（使用 PostgresSQL）" href=https://calvinegs.github.io/posts/dotnet6-webapi-jwt-postgres/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>使用 Docker 執行 PostgresSQL 與 pgAdmin
-</h2>
-</header>
-<section class=entry-content>
-<p>github Source code
-使用 Docker 執行 PostgresSQL 與 pgAdmin 對開發人員而言，使用各式的資料庫管理系統來當應用程式的後端資料存取層是家常便飯。若再考慮上每種資料庫管理系統有不同的版本，肯定會讓你的開發環境負擔過重、過於複雜。使用 Docker 來於適當的時機開啟適用的資料庫管理系統會是一個不錯的選擇。
-本篇筆記紀錄使用 docker (docker compose) 來快速的設置 postgresSQL 及其管理工具 pgAdmin。
-檢查是否已安裝了 Docker (docker version) $ docker version Client: Docker Engine - Community Version: 20.10.16 API version: 1.41 Go version: go1.17.10 Git commit: aa7e414 Built: Thu May 12 09:17:23 2022 OS/Arch: linux/amd64 Context: default Experimental: true Server: Docker Engine - Community Engine: Version: 20.10.16 API version: 1.41 (minimum version 1.12) Go version: go1....</p>
-</section>
-<footer class=entry-footer><span title="2022-06-01 00:00:00 +0000 UTC">June 1, 2022</span>&nbsp;·&nbsp;4 min&nbsp;·&nbsp;Theme PaperMod</footer>
-<a class=entry-link aria-label="post link to 使用 Docker 執行 PostgresSQL 與 pgAdmin" href=https://calvinegs.github.io/posts/docker-postgres-pgadmin/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
