--- a/index.html
+++ b/index.html
@@ -91,6 +91,22 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>使用 Angular 來建立網路應用程式
+</h2>
+</header>
+<section class=entry-content>
+<p>github Source code
+Angular、React、Vue 是三個最受歡迎的前端框架，接下來的三篇筆記分別要紀錄使用這三個不同的框架來建立功能一模一樣的網路應用程式。
+這個網路應用程式的需求
+産品訂購功能 表頭：訂購商品總數、總額及送出訂單功能 商品過濾功能：依産品類別來顯示商品 商品清單：顯示商品明細、商品售價、訂購數量下拉選單及加入購物車等功能 訂單確認功能：顯示訂購商品明細及總金額 訂購成功功能：顯示訂購完成資訊 使用技術:
+Angular 14 Bootstrap 5 (UI Framework) Angular Router Services NodeJS & Express json-server npm-run-all (npm 套件) 建立新專案 使用下列的 npm init 語法即可建立最新版 Angular 預設的應用程式結構
+$ npm init @angular angularapp -- --routing --style=scss Need to install the following packages: @angular/create@14.1.3 Ok to proceed? (y) CREATE angularapp/README.md (1064 bytes) CREATE angularapp/....</p>
+</section>
+<footer class=entry-footer><span title="2022-08-21 00:00:00 +0000 UTC">August 21, 2022</span>&nbsp;·&nbsp;13 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to 使用 Angular 來建立網路應用程式" href=https://calvinegs.github.io/posts/webapp-angular/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>使用 Angular 14 中內建的 TitleStrategy 功能來自定瀏覽器的頁面標題
 </h2>
 </header>
@@ -112,7 +128,7 @@
 <section class=entry-content>
 <p>github Source code
 本文主要的主題是要呈現如何完成具有 “新增、修改、刪除、查詢“ Todo List 功能的 Angular Application。同時搭配使用者角色/權限控管來呈現不同 UI 功能。
-在最後的章節會介紹到如何使用 Angular Directive 來簡位程式避免程式碼重覆。
+在最後的章節會介紹到如何使用 Angular Directive 來簡化程式避免程式碼重覆。
 為完整性考量，還是記錄如何一步步從無到有使用 Angular 14 相關功能來建立一個使用者資料註冊、登入的表單功能（連結到後端 node+MySQL Web API )，在這些表單中按下送出時會自動檢核使用者所輸入的資料是否合乎程式中所設定的檢核邏輯，並顯示合適的訊息反應給使用者。其中將會使用到下列技術:
 Angular CLI 14 Bootstrap 5 (UI Framework) Angular Reactive Form Custome Validator Interceptor JWT Session Storage Router Services Guard & Router Data RxJs Custome Directive 註1: 若你已經查閱過 使用 Angular 14 建立 Reactive Form 表單驗證範例 這篇筆記了，那可以直接跳到 “完成 Todo 相關 Component 的功能” 這個章節。...</p>
 </section>
@@ -144,19 +160,6 @@ NodeJs 17.6.0 Express 4.18.1 cors 2.8.5 crypto-js 4.1.1 # 加解密套件 jsonwe
 </section>
 <footer class=entry-footer><span title="2022-07-07 00:00:00 +0000 UTC">July 7, 2022</span>&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Theme PaperMod</footer>
 <a class=entry-link aria-label="post link to 使用 Docker 執行 Mariadb" href=https://calvinegs.github.io/posts/docker-mariadb/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>使用 Node.js + express + MySQL 建立一個後端服務 REST API
-</h2>
-</header>
-<section class=entry-content>
-<p>github Source code
-Technology:
-NodeJs 17.6.0 Express 4.18.1 cors 2.8.5 crypto-js 4.1.1 # 加解密套件 jsonwebtoken 8.5.1 # Json Web Token 的功能套件 sequelize 6.20.2 # ORM 套件 mysql2 2.3.3 # MySQL client for Node.js MySQL 8.0 # 使用的資料庫 專案完成後的檔案結構 ./專案目錄 ├── app/ │ ├── config/ │ │ └── db.config.js │ ├── middleware/ │ │ ├── auth.jwt.js │ │ ├── index.js │ │ └── verify.signup.js │ ├── models/ │ │ ├── index....</p>
-</section>
-<footer class=entry-footer><span title="2022-07-04 00:00:00 +0000 UTC">July 4, 2022</span>&nbsp;·&nbsp;16 min&nbsp;·&nbsp;Theme PaperMod</footer>
-<a class=entry-link aria-label="post link to 使用 Node.js + express + MySQL 建立一個後端服務 REST API" href=https://calvinegs.github.io/posts/nodejs-restapi-mysql/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
