--- a/index.html
+++ b/index.html
@@ -91,6 +91,22 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>TypeScript 編譯器的選項
+</h2>
+</header>
+<section class=entry-content>
+<p>TypeScript 的許多功能是透過 TypeScript 編譯器 (tsc) 來實現的。tsc 有許多選項可以用來調整編譯過程的行為。
+設置專案 建立一個目錄
+$ mkdir tsc-options $ cd tsc-options 透過 npm 產生 package.json 檔案 $ npm init -y 在 Local 端安裝 TypeScript $ npm install --save-dev typescript@4.8.3 #or -D TypeScript 選項值設定 透過 tsc 建立 TypeScript 的設定檔 (tsconfig.json) $ npx tsc --init P.S. 由於 typescript 是安裝在 local，執行時要透過 npx 指令(由 npm 所提供)
+TypeScript 選項值影響 先在專案目錄下建立 src 子目錄，並在此目錄下撰寫程式
+$ mkdir src $ touch src/index.ts 程式如下:
+function add(a, b) { return a + b; } add(25, null); 上述的程式可否通過 tsc 型態檢核嗎？ 答案很難回答，因為取決於“選項”的設定。...</p>
+</section>
+<footer class=entry-footer><span title="2022-09-24 00:00:00 +0000 UTC">September 24, 2022</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to TypeScript 編譯器的選項" href=https://calvinegs.github.io/posts/typescript-compiler-options/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>使用 Vue 來建立網路應用程式
 </h2>
 </header>
@@ -151,21 +167,6 @@ $ npm init @angular angularapp -- --routing --style=scss Need to install the fol
 </section>
 <footer class=entry-footer><span title="2022-07-20 00:00:00 +0000 UTC">July 20, 2022</span>&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Theme PaperMod</footer>
 <a class=entry-link aria-label="post link to 使用 Angular 14 中內建的 TitleStrategy 功能來自定瀏覽器的頁面標題" href=https://calvinegs.github.io/posts/angular-titlestrategy/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Angular 14 範例: 透過 Web API 完成 CRUD 的應用程式
-</h2>
-</header>
-<section class=entry-content>
-<p>github Source code
-本文主要的主題是要呈現如何完成具有 “新增、修改、刪除、查詢“ Todo List 功能的 Angular Application。同時搭配使用者角色/權限控管來呈現不同 UI 功能。
-在最後的章節會介紹到如何使用 Angular Directive 來簡化程式避免程式碼重覆。
-為完整性考量，還是記錄如何一步步從無到有使用 Angular 14 相關功能來建立一個使用者資料註冊、登入的表單功能（連結到後端 node+MySQL Web API )，在這些表單中按下送出時會自動檢核使用者所輸入的資料是否合乎程式中所設定的檢核邏輯，並顯示合適的訊息反應給使用者。其中將會使用到下列技術:
-Angular CLI 14 Bootstrap 5 (UI Framework) Angular Reactive Form Custome Validator Interceptor JWT Session Storage Router Services Guard & Router Data RxJs Custome Directive 註1: 若你已經查閱過 使用 Angular 14 建立 Reactive Form 表單驗證範例 這篇筆記了，那可以直接跳到 “完成 Todo 相關 Component 的功能” 這個章節。...</p>
-</section>
-<footer class=entry-footer><span title="2022-07-11 00:00:00 +0000 UTC">July 11, 2022</span>&nbsp;·&nbsp;24 min&nbsp;·&nbsp;Theme PaperMod</footer>
-<a class=entry-link aria-label="post link to Angular 14 範例: 透過 Web API 完成 CRUD 的應用程式" href=https://calvinegs.github.io/posts/angular-webapi-crud/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
