--- a/index.html
+++ b/index.html
@@ -91,6 +91,29 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>Test
+</h2>
+</header>
+<section class=entry-content>
+<p>testing for deploy</p>
+</section>
+<footer class=entry-footer><span title="2022-12-25 09:51:14 +0800 +0800">December 25, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to Test" href=https://calvinegs.github.io/posts/test/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
+<h2>好用的 npm 指令
+</h2>
+</header>
+<section class=entry-content>
+<p>本篇筆記是除了以下常用的 npm 指令外，要介紹幾個好用的其他 npm 指令
+npm –version (檢查在本端主機上安裝的 npm 版本) npm init (在現行目錄中初始化專案) npm list (顯示所有已安裝在專案中的所有套件) npm install (在專案中安裝套件) npm uninstall (移除已安裝在專案中的套件) 1.開啟套件的說明文件 - npm docs $ npm docs [package-name] #例如以下指令將會自動開啟 lodash 套件的說明網頁 $ npm docs lodash 2.開啟套件的原始碼儲存庫網頁 - npm repo $ npm repo [package-name] #例如以下指令將會自動開啟 lodash 套件的原始碼儲存庫網頁 $ npm repo lodash 3.查看套件的版本資訊 $ npm v [package-name] versions #以下指令將直接在 終端機 上顯示所有 lodash 套件的版本資訊 $ npm v lodash versions [ '0....</p>
+</section>
+<footer class=entry-footer><span title="2022-12-11 00:00:00 +0000 UTC">December 11, 2022</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to 好用的 npm 指令" href=https://calvinegs.github.io/posts/npm-commands/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>TypeScript 編譯器的選項
 </h2>
 </header>
@@ -136,37 +159,6 @@ $ npx create-react-app reactapp --template typescript Creating a new React app i
 </section>
 <footer class=entry-footer><span title="2022-08-23 00:00:00 +0000 UTC">August 23, 2022</span>&nbsp;·&nbsp;14 min&nbsp;·&nbsp;Theme PaperMod</footer>
 <a class=entry-link aria-label="post link to 使用 React 來建立網路應用程式" href=https://calvinegs.github.io/posts/webapp-react/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>使用 Angular 來建立網路應用程式
-</h2>
-</header>
-<section class=entry-content>
-<p>github Source code
-Angular、React、Vue 是三個最受歡迎的前端框架，接下來的三篇筆記分別要紀錄使用這三個不同的框架來建立功能一模一樣的網路應用程式。
-這個網路應用程式的需求
-産品訂購功能 表頭：訂購商品總數、總額及送出訂單功能 商品過濾功能：依産品類別來顯示商品 商品清單：顯示商品明細、商品售價、訂購數量下拉選單及加入購物車等功能 訂單確認功能：顯示訂購商品明細及總金額 訂購成功功能：顯示訂購完成資訊 使用技術:
-Angular 14 Bootstrap 5 (UI Framework) Angular Router Services NodeJS & Express json-server npm-run-all (npm 套件) 建立新專案 使用下列的 npm init 語法即可建立最新版 Angular 預設的應用程式結構
-$ npm init @angular angularapp -- --routing --style=scss Need to install the following packages: @angular/create@14.1.3 Ok to proceed? (y) CREATE angularapp/README.md (1064 bytes) CREATE angularapp/....</p>
-</section>
-<footer class=entry-footer><span title="2022-08-21 00:00:00 +0000 UTC">August 21, 2022</span>&nbsp;·&nbsp;13 min&nbsp;·&nbsp;Theme PaperMod</footer>
-<a class=entry-link aria-label="post link to 使用 Angular 來建立網路應用程式" href=https://calvinegs.github.io/posts/webapp-angular/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>使用 Angular 14 中內建的 TitleStrategy 功能來自定瀏覽器的頁面標題
-</h2>
-</header>
-<section class=entry-content>
-<p>github Source code
-需求情境 希望我們的應用程式在每次成功導航後都能自動新瀏覽器的頁面標題。
-當使用者按下“功能列的HOME後，程式除了導覽至 Home Page外，瀏覽器的頁面標題顯示的是: “CRUD App - Home”
-當使用者按下“功能列的登入按鈕後，程式除了導覽至 登入畫面　外，瀏覽器的頁面標題顯示的是: “CRUD App - Login”
-檢視 Angular/CLI $ ng version _ _ ____ _ ___ / \ _ __ __ _ _ _| | __ _ _ __ / ___| | |_ _| / △ \ | '_ \ / _` | | | | |/ _` | '__| | | | | | | / ___ \| | | | (_| | |_| | | (_| | | | |___| |___ | | /_/ \_\_| |_|\__, |\__,_|_|\__,_|_| \____|_____|___| |___/ Angular CLI: 14....</p>
-</section>
-<footer class=entry-footer><span title="2022-07-20 00:00:00 +0000 UTC">July 20, 2022</span>&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Theme PaperMod</footer>
-<a class=entry-link aria-label="post link to 使用 Angular 14 中內建的 TitleStrategy 功能來自定瀏覽器的頁面標題" href=https://calvinegs.github.io/posts/angular-titlestrategy/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
