--- a/index.html
+++ b/index.html
@@ -91,6 +91,19 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>使用 Docker Compose 執行 MSSQL Server 2022
+</h2>
+</header>
+<section class=entry-content>
+<p>使用 Docker Compose 執行 MSSQL Server 2022 對開發人員而言，使用各式的資料庫管理系統來當應用程式的後端資料存取層是家常便飯。若再考慮上每種資料庫管理系統有不同的版本，肯定會讓你的開發環境負擔過重、過於複雜。使用 Docker 來於適當的時機開啟適用的資料庫管理系統會是一個不錯的選擇。
+本篇筆記紀錄使用 docker (docker compose) 來快速的設置 MSSQL 2022。
+檢查是否已安裝了 Docker (docker version) $ docker version Client: Docker Engine - Community Version: 23.0.1 API version: 1.42 Go version: go1.19.5 Git commit: a5ee5b1 Built: Thu Feb 9 19:46:56 2023 OS/Arch: linux/amd64 Context: default Server: Docker Engine - Community Engine: Version: 23.0.1 API version: 1.42 (minimum version 1.12) Go version: go1.19.5 Git commit: bc3805a Built: Thu Feb 9 19:46:56 2023 OS/Arch: linux/amd64 Experimental: false containerd: Version: 1....</p>
+</section>
+<footer class=entry-footer><span title="2023-02-26 00:00:00 +0000 UTC">February 26, 2023</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to 使用 Docker Compose 執行 MSSQL Server 2022" href=https://calvinegs.github.io/posts/docker-compose-mssql/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>使用 Angular Material 建立一個簡易的 Admin Template II
 </h2>
 </header>
@@ -151,19 +164,6 @@ Angular Interceptor 可以用來作什麼用途呢
 </section>
 <footer class=entry-footer><span title="2023-01-31 00:00:00 +0000 UTC">January 31, 2023</span>&nbsp;·&nbsp;7 min&nbsp;·&nbsp;Theme PaperMod</footer>
 <a class=entry-link aria-label="post link to Angular Intercoptor 使用案例一：Loading Spinner" href=https://calvinegs.github.io/posts/angular-intercoptor-loadingspinner/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>在 ubuntu 22.04 中建立一支 Angular 15 Web App
-</h2>
-</header>
-<section class=entry-content>
-<p>以最簡潔的方式在 ubuntu 22.04 中建立一支 Angular 15 Web App 先講結論：使用 “npm init @angular " 就可以在不先安裝 Angular Cli 的前題下，來建立一支 Web App 範本程式。
-一般要新增一支 Angular Web App 都會使用 Angular Cli，而使用 Angular Cli 必須搭配上 Node.js & npm
-一般的方式 在 ubuntu 22.04 上安裝 Node.js $ node -v # 先檢視是否有安裝 Node.js，若沒有則需安裝 $ $ sudo apt update $ sudo apt install nodejs $ $ node -v v12.22.9 在 ubuntu 22.04 上安裝 npm $ npm -v # 先檢視是否有安裝 npm，若沒有則需安裝 $ $ sudo apt update $ sudo apt install npm $ $ npm -v 8....</p>
-</section>
-<footer class=entry-footer><span title="2023-01-05 00:00:00 +0000 UTC">January 5, 2023</span>&nbsp;·&nbsp;15 min&nbsp;·&nbsp;Theme PaperMod</footer>
-<a class=entry-link aria-label="post link to 在 ubuntu 22.04 中建立一支 Angular 15 Web App" href=https://calvinegs.github.io/posts/nvm-angular15/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
