deploy: a8072d9bce2181bfc2c96cbd75bf7fafe5fef510

--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>Context API in ReactJS
+</h2>
+</header>
+<section class=entry-content>
+<p>github Source code
+Context API in ReactJS Context API 是 ReactJS 中的一項功能，它允許跨組件樹共享資料，而不必通過樹的每一層向下傳遞 props。它提供了一種通過組件樹傳遞資料而無需使用 props 的方法，使用 props 這對於具有多層組件的大型應用程序來說可能會變得很麻煩。
+使用 vite 建立一支 react web app 樣版 使用 yarn 語法
+$ yarn create vite react-context -- --template react && cd react-context $ yarn $ yarn dev 使用 npm 語法
+$ npm create vite react-context -- --template react && cd react-context $ npm i $ npm run dev 使用 props 來傳遞資料 先來看看原來使用 props 來傳遞資料給子元件的方式。...</p>
+</section>
+<footer class=entry-footer><span title="2023-04-10 00:00:00 +0000 UTC">April 10, 2023</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to Context API in ReactJS" href=https://calvinegs.github.io/posts/react-context/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>Typed Form in angular 15
 </h2>
 </header>
@@ -148,19 +163,6 @@ Dotnet CLI Entity Framework 7.0 Json Web Token PostgreSQL DB (Docker Version) AS
 </section>
 <footer class=entry-footer><span title="2023-03-06 00:00:00 +0000 UTC">March 6, 2023</span>&nbsp;·&nbsp;16 min&nbsp;·&nbsp;Theme PaperMod</footer>
 <a class=entry-link aria-label="post link to 使用 .NET 7.0 建立使用 以 JWT 身份驗證機制的 ASP.NET Web Api（並使用 Microsoft Identity 框架來存儲使用者和角色等資料）" href=https://calvinegs.github.io/posts/dotnet7-webapi-jwt/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>使用 Docker Compose 執行 MSSQL Server 2022
-</h2>
-</header>
-<section class=entry-content>
-<p>使用 Docker Compose 執行 MSSQL Server 2022 對開發人員而言，使用各式的資料庫管理系統來當應用程式的後端資料存取層是家常便飯。若再考慮上每種資料庫管理系統有不同的版本，肯定會讓你的開發環境負擔過重、過於複雜。使用 Docker 來於適當的時機開啟適用的資料庫管理系統會是一個不錯的選擇。
-本篇筆記紀錄使用 docker (docker compose) 來快速的設置 MSSQL 2022。
-檢查是否已安裝了 Docker (docker version) $ docker version Client: Docker Engine - Community Version: 23.0.1 API version: 1.42 Go version: go1.19.5 Git commit: a5ee5b1 Built: Thu Feb 9 19:46:56 2023 OS/Arch: linux/amd64 Context: default Server: Docker Engine - Community Engine: Version: 23.0.1 API version: 1.42 (minimum version 1.12) Go version: go1.19.5 Git commit: bc3805a Built: Thu Feb 9 19:46:56 2023 OS/Arch: linux/amd64 Experimental: false containerd: Version: 1....</p>
-</section>
-<footer class=entry-footer><span title="2023-02-26 00:00:00 +0000 UTC">February 26, 2023</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Theme PaperMod</footer>
-<a class=entry-link aria-label="post link to 使用 Docker Compose 執行 MSSQL Server 2022" href=https://calvinegs.github.io/posts/docker-compose-mssql/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
