--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>Install rust on ubuntu 20.04
+</h2>
+</header>
+<section class=entry-content>
+<p>Install rust on ubuntu 20.04 透過 rustup 來安裝 rust 此安裝方式是官方所推薦。rustup 是負責安裝及管理 Rust 的工具。在 Rust 開發環境中，所有工具都安裝在 ~/.cargo/bin 目錄中。您也可以在這裡找到 Rust 工具鏈，包括 rustc、cargo 以及 rustup。
+進行安裝前可以透過以下指令來確認是否已經安裝了 rust:
+$ rustc --version 如果顯示出 rustc 版本，則表是在你的環境中已安裝好了 rust:
+rustc 1.70.0 (90c541806 2023-05-31) 下載 rustup 先確認你的 ubuntu 已安裝了 curl。
+$ curl --version curl 7.68.0 (x86_64-pc-linux-gnu) libcurl/7.68.0 OpenSSL/1.1.1f zlib/1.2.11 brotli/1.0.7 libidn2/2.2.0 libpsl/0.21.0 (+libidn2/2.2.0) libssh/0.9.3/openssl/zlib nghttp2/1.40.0 librtmp/2.3 Release-Date: 2020-01-08 Protocols: dict file ftp ftps gopher http https imap imaps ldap ldaps pop3 pop3s rtmp rtsp scp sftp smb smbs smtp smtps telnet tftp Features: AsynchDNS brotli GSS-API HTTP2 HTTPS-proxy IDN IPv6 Kerberos Largefile libz NTLM NTLM_WB PSL SPNEGO SSL TLS-SRP UnixSockets 若已安裝了 curl，再使用以下指令來下載 rustup:...</p>
+</section>
+<footer class=entry-footer><span title="2023-07-01 00:00:00 +0000 UTC">July 1, 2023</span>&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Theme PaperMod</footer>
+<a class=entry-link aria-label="post link to Install rust on ubuntu 20.04" href=https://calvinegs.github.io/posts/rust-install/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>Context API in ReactJS
 </h2>
 </header>
@@ -150,19 +165,6 @@ $ npm init @angular standAloneComponent -- --routing --style=scss && cd standalo
 </section>
 <footer class=entry-footer><span title="2023-03-13 00:00:00 +0000 UTC">March 13, 2023</span>&nbsp;·&nbsp;9 min&nbsp;·&nbsp;Theme PaperMod</footer>
 <a class=entry-link aria-label="post link to How to using Angular Standalone Component" href=https://calvinegs.github.io/posts/angular-standlone-component/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>使用 .NET 7.0 建立使用 以 JWT 身份驗證機制的 ASP.NET Web Api（並使用 Microsoft Identity 框架來存儲使用者和角色等資料）
-</h2>
-</header>
-<section class=entry-content>
-<p>github Source code
-本文將記錄如何一步步從無到有，使用 Dotnet Core 7.0 建立 ASP.NET Core Web API，其中將會使用到下列技術:
-Dotnet CLI Entity Framework 7.0 Json Web Token PostgreSQL DB (Docker Version) ASP.NET Core Generator 專案完成後的檔案結構 ./專案目錄 ├── .config/ │ └── dotnet-tools.json ├── .vscode/ │ ├── launch.js │ └── tasks.json ├── Controller/ │ ├── AuthenticateController.cs │ ├── TodoController.cs │ └── WeatherForecast.cs ├── Data/ │ └── ApiDbContext.cs ├── Migrations/ ├── Models/ │ ├── AuthenticateData.cs │ └── TodoList.cs ├── obj/ ├── Properties/ │ └── launchSettings....</p>
-</section>
-<footer class=entry-footer><span title="2023-03-06 00:00:00 +0000 UTC">March 6, 2023</span>&nbsp;·&nbsp;16 min&nbsp;·&nbsp;Theme PaperMod</footer>
-<a class=entry-link aria-label="post link to 使用 .NET 7.0 建立使用 以 JWT 身份驗證機制的 ASP.NET Web Api（並使用 Microsoft Identity 框架來存儲使用者和角色等資料）" href=https://calvinegs.github.io/posts/dotnet7-webapi-jwt/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
